// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if fulfilled 1`] = `
<div
  data-stylename="postCompletion"
>
  <div>
    Is this still active?
  </div>
  <DropdownButton
    choices={
      Array [
        Object {
          "label": "Active",
          "value": false,
        },
        Object {
          "label": "Completed",
          "value": true,
        },
      ]
    }
    label="Completed"
    onChoose={[Function]}
  />
</div>
`;

exports[`renders correctly if not fulfilled 1`] = `
<div
  data-stylename="postCompletion"
>
  <div>
    Is this still available?
  </div>
  <DropdownButton
    choices={
      Array [
        Object {
          "label": "Available",
          "value": false,
        },
        Object {
          "label": "Unavailable",
          "value": true,
        },
      ]
    }
    label="Available"
    onChoose={[Function]}
  />
</div>
`;
